@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19950730
+MANIFEST for ded, version t19950830
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
